# Octave-fuction

octave-communications-3cb4b1319df467cdd1d13e06f192b848424c9800/: .hgignore  .hgtags  Makefile  NEWS
octave-communications-3cb4b1319df467cdd1d13e06f192b848424c9800/inst/: berconfint.m  finddelay.m  huffmandeco.m  pskmod.m  qammod.m
octave-communications-3cb4b1319df467cdd1d13e06f192b848424c9800/src/: Makefile.in  __errcore__.cc  __gfweight__.cc  base-lu.cc  bootstrap  configure.ac  cyclgen.cc  cyclpoly.cc  galois-def.h  galois-ops.h  galois.cc  galois.h  galoisfield.cc  genqamdemod.cc  gf.cc  isprimitive.cc  op-gm-gm.cc  op-gm-m.cc  op-gm-s.cc  op-m-gm.cc  op-s-gm.cc  ov-galois.cc  ov-galois.h  primpoly.cc  syndtable.cc
